test/negative/302_unknown_record_field.err
302_unknown_record_field.fx:4:9: error: the record element z is not found

1 errors occured during type checking.
